# fedpydeseq2-paper-experiments

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  Makefile  README.md  experiment_paths_template.yaml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr_push_validation.yml
experiment_specifications/: ablation_stats_clip_specs_heterogeneity_fixed.yaml  ablation_stats_clip_specs_heterogeneity_varies.yaml  continuous_factor_specs.yaml  heterogeneity_specs.yaml  multi_factor_specs.yaml  single_factor_specs.yaml
fedpydeseq2_graphs/: README.md  config_template.yaml  descriptions.yaml  macros.tex  paths_template.yaml  pyproject.toml
fedpydeseq2_graphs/fedpydeseq2_graphs/: clean_log_file.py  constants.py  create_graphs.py  create_tree.py  get_workflow_file.py
fedpydeseq2_graphs/fedpydeseq2_graphs/utils/: data_classes.py  function_block_tree_utils.py  graph_utils.py  iteration_blocks_utils.py  markdown_table_utils.py  shared_states_remote_functions_utils.py  table_utils.py  utils.py
fedpydeseq2_parameters/: default.yaml
paper_experiments/figures/: generate_cross_tables_utils.py  generate_gsea_plots_utils.py  generate_heterogeneity_plots_utils.py  generate_lfc_lfc_plots.py  generate_lfc_padj_violin_plots.py  generate_volcano_plots.py  plot_pipe.py  utils.py
paper_experiments/run_dge_gsea_methods/: dge_gsea_pipe.py  fedpydeseq2_tcga_pipe.py  make_fedpydeseq2_remote_scripts.py  meta_analysis_tcga_pipe.py  pydeseq2_per_center_tcga_pipe.py  pydeseq2_pooled_tcga_pipe.py
paper_experiments/run_dge_gsea_methods/gsea_utils/: environment.yml  gsea.R  gsea_utils.py
paper_experiments/utils/: config_utils.py  constants.py
